improve UI UX of admin system

--- a/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="col-md-5 text-center" >
 					 	<button type="button" style="width: 160px;" class="btn btn-goto-router" onclick="loadAllDataServices()" >
-					 		<i class="fa fa-fw fa-filter"></i> OK 
+					 		<i class="fa fa-fw fa-filter"></i> Filter 
 					 	</button>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 			</div>
 			<div class="modal-footer" >
 				<button type="button" class="btn btn-info" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close</button>
-				<button type="button" class="btn btn-success" onclick="saveDataServiceInfo(this)" id="dataServiceSaveButton"  >
+				<button type="button" class="btn btn-goto-router" onclick="saveDataServiceInfo(this)" id="dataServiceSaveButton"  >
 					<i class="fa fa-check-square-o" aria-hidden="true"></i> Save 
 				</button>		        
 		    </div>  
