--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class='col-lg-2 col-xs-12 text-center'>
-        	<button type="button" class="btn btn-do-now" style="width: 80%" onclick="refreshDashboardCX()" > 
+        	<button type="button" class="btn btn-goto-router" style="width: 70%" onclick="refreshDashboardCX()" > 
         		<i class="fa fa-check" aria-hidden="true"></i> OK </button>
         </div>
     </div>
