--- a/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
@@ -39,7 +39,7 @@
 		            </div>
 		        </div>
 		        <div class='col-lg-2 col-xs-12 text-center'>
-		        	<button id="btn_refresh_event_report" type="button" class="btn btn-do-now" style="width: 80%"  > 
+		        	<button id="btn_refresh_event_report" type="button" class="btn btn-goto-router" style="width: 90%"  > 
 		        		<i class="fa fa-check" aria-hidden="true"></i> OK </button>
 		        </div>
 		    </div>
