--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -61,7 +61,7 @@
 		            </div>
 		        </div>
 		        <div class='col-md-2 col-xs-12 text-center'>
-		        	<button type="button" class="btn btn-do-now" style="width: 86%" onclick="showDashboardReport(true)" > 
+		        	<button type="button" class="btn btn-goto-router" style="width: 90%" onclick="showDashboardReport(true)" > 
 		        		<i class="fa fa-check" aria-hidden="true"></i> OK </button>
 		        </div>
 		    </div>
