--- a/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
@@ -14,8 +14,8 @@
              <button type="button" class="btn btn-danger" id="assetGroupEditor_delete">
               	<i class="fa fa-trash" aria-hidden="true"></i> Delete
              </button>
-	         <button type="button" class="btn btn-success data-control-edit" onclick="assetGroupEditorSave()"  > 
-	       		<i class="fa fa-fw fa-check"></i> Save 
+	         <button type="button" class="btn btn-goto-router data-control-edit" onclick="assetGroupEditorSave()"  > 
+	       		<i class="fa fa-fw fa-check-square-o"></i> Save 
 	       	 </button>
         </div>
         
