--- a/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
@@ -96,8 +96,8 @@
                 <button type="button" class="btn btn-danger" onclick="LeoCdpAdmin.navFunctions.deleteItemAsset(postModel)">
                 	<i class="fa fa-trash" aria-hidden="true"></i> Delete
                 </button>
-                <button type="button" class="btn btn-success data-control-edit" onclick="postEditorSave()"  > 
-	        		<i class="fa fa-fw fa-check"></i> Save 
+                <button type="button" class="btn btn-goto-router data-control-edit" onclick="postEditorSave()"  > 
+	        		<i class="fa fa-fw fa-check-square-o"></i> Save 
 	        	</button>  
             </div>
             <hr>
