--- a/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
@@ -10,7 +10,7 @@
         	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
         </button>
 		<button id="run_import_product_job" type="button" class="btn btn-success" disabled="disabled"  > 
-	     	<i class="fa fa-fw fa-check"></i> Run Import Job 
+	     	<i class="fa fa-fw fa-check-square-o"></i> Run Import Job 
 	    </button>
 	</div>
 </div>
