--- a/resources/app-templates/leocdp-admin/modules/asset/item-short-link-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-short-link-editor.html
@@ -103,8 +103,8 @@
                 <button type="button" class="btn btn-danger" onclick="LeoCdpAdmin.navFunctions.deleteItemAsset(shortLinkData)">
                 	<i class="fa fa-trash" aria-hidden="true"></i> Delete
                 </button>
-                <button type="button" class="btn btn-success data-control-edit" onclick="shortUrlLinkEditorSave()"  > 
-	        		<i class="fa fa-fw fa-check"></i> Save 
+                <button type="button" class="btn btn-goto-router data-control-edit" onclick="shortUrlLinkEditorSave()"  > 
+	        		<i class="fa fa-fw fa-check-square-o"></i> Save 
 	        	</button>  
             </div>
             <hr>
@@ -289,7 +289,7 @@
                             if(json.data === ''){
                                 $('#error-on-save').html('Data is not valid !').show().delay(6000).fadeOut('slow');
                             } else {
-                                callback(json.data);
+                                callback(shortLinkData); // Ok
                             }                        
                         }
                     } else {
@@ -302,13 +302,10 @@
     }
 
     function shortUrlLinkEditorSave() {
-        var onSaveOk = function (itemId) {
-            console.log('=====> shortUrlLinkEditorSave ', itemId);   
+        var onSaveOk = function (item) {
+        	notifySavedOK("Short URL Link")  
             $('#ajaxLoaderDialog').modal('hide');   
-            setTimeout(function(){
-            	//gotoAssetItemView(itemId, groupId, categoryId);
-            	history.back()
-            },1000);
+            location.hash = "calljs-leoCdpRouter('Asset_Group_Details','" + item.groupId + "')";
         }
         saveShortUrlLink(onSaveOk);
     }
