--- a/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
@@ -22,8 +22,8 @@
                	<i class="fa fa-trash" aria-hidden="true"></i> Delete
              </button>
              
-             <button type="button" class="btn btn-success data-control-edit" onclick="webTemplateEditorSave()"  > 
-        		<i class="fa fa-fw fa-check"></i> Save 
+             <button type="button" class="btn btn-goto-router data-control-edit" onclick="webTemplateEditorSave()"  > 
+        		<i class="fa fa-fw fa-check-square-o"></i> Save 
         	</button>  
            
         </div>
@@ -296,7 +296,7 @@
                             if(json.data === ''){
                                 $('#error-on-save').html('Data is not valid !').show().delay(6000).fadeOut('slow');
                             } else {
-                                callback(json.data);
+                                callback(htmlTemplateData); // OK
                             }                        
                         }
                     } else {
@@ -309,12 +309,10 @@
     }
 
     function webTemplateEditorSave() {
-        var onSaveOk = function (itemId) {
-            console.log('=====> webTemplateEditorSave ', itemId);   
+        var onSaveOk = function (item) {
+        	notifySavedOK("Content Template")  
             $('#ajaxLoaderDialog').modal('hide');   
-            setTimeout(function(){
-            	history.back()
-            },500);
+            location.hash = "calljs-leoCdpRouter('Asset_Group_Details','" + item.groupId + "')";
         }
         saveWebTemplateData(onSaveOk);
     }
