--- a/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
@@ -41,7 +41,7 @@
                 	Delete
                 </button>
                 
-                <button type="button" class="btn btn-success data-control-edit" id="btn_edit_post" > 
+                <button type="button" class="btn btn-goto-router data-control-edit" id="btn_edit_post" > 
 	        		<i class="fa fa-fw fa-pencil-square-o"></i> Edit 
 	        	</button>
             </div>
