--- a/resources/app-templates/leocdp-admin/modules/customer/customer-event-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-event-import.html
@@ -9,7 +9,7 @@
 		<button type="button" class="btn btn-info" onclick="history.back()">
         	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
         </button>
-		<button id="run_import_event_job" type="button" class="btn btn-success" disabled="disabled"  > 
+		<button id="run_import_event_job" type="button" class="btn btn-goto-router" disabled="disabled"  > 
 	     	<i class="fa fa-fw fa-check"></i> Run Import Job 
 	    </button>
 	</div>
