--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
@@ -9,8 +9,8 @@
 		<button type="button" class="btn btn-info" onclick="history.back()">
         	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
         </button>
-		<button id="run_import_profile_job" type="button" class="btn btn-success" disabled="disabled"  > 
-	     	<i class="fa fa-fw fa-check"></i> Run Import Job 
+		<button id="run_import_profile_job" type="button" class="btn btn-goto-router" disabled="disabled"  > 
+	     	<i class="fa fa-fw fa-check-square-o"></i> Run Import Job 
 	    </button>
 	</div>
 </div>
