--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -52,7 +52,7 @@
 		<button type="button" class="btn btn-info" title="Go back" onclick="history.back()" > 
 			<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back 
 		</button>
-		<button type="button" class="btn btn-primary" onclick="location.reload()" title="Refresh data"  > 
+		<button type="button" class="btn btn-do-now" onclick="location.reload()" title="Refresh data"  > 
        		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
        	</button>
 		<button type="button" class="btn btn-danger data-control-delete" title="Delete this segment" > 
