--- a/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
@@ -9,7 +9,7 @@
 	     	<button type="button" class="btn btn-info" onclick="history.back()" title="Back"  > 
 	       		<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
 	       	</button>
-	       	<button type="button" class="btn btn-success data-control-edit" onclick="saveMyLoginProfile()" title="Save Login Account"  > 
+	       	<button type="button" class="btn btn-goto-router data-control-edit" onclick="saveMyLoginProfile()" title="Save Login Account"  > 
 	     		<i class="fa fa-check-square-o" aria-hidden="true"></i> Save 
 	     	</button>
 	     </div>
