--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -44,7 +44,7 @@
 		         	</div>
 		         	<div class="col-lg-3 text-right" >
 			         	<button type="button" class="btn btn-goto-router" onclick="callDataQualityComputeJob()" title="Recompute and update data quality score for all profiles"  > 
-				     		<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Run Data Quality Compute Job
+				     		<i class="fa fa-check-square-o" aria-hidden="true"></i> Run Data Quality Scoring Job
 				     	</button>
 			     	</div>
 					<div class="col-lg-12" style="margin-top: 8px;">
