--- a/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
@@ -6,7 +6,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title"> Confirmation </h4>
+                <h3 class="modal-title"> Confirmation </h3>
             </div>
             <div class="modal-body">
                 <div class="alert alert-danger">
@@ -16,8 +16,8 @@
                 <input id="delete_callback" type="hidden" name="delete_callback" value="">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" onclick="confirmDeleteDialogOk()"> OK, I CONFIRM </button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal"> CANCEL </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal"> <i class="fa fa-minus-circle" aria-hidden="true"></i> CANCEL </button>
+                <button type="button" class="btn btn-danger" onclick="confirmDeleteDialogOk()"> <i class="fa fa-check" aria-hidden="true"></i> OK, I CONFIRM </button>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title"> Delete Data Confirmation </h4>
+                <h3 class="modal-title"> Delete Data Confirmation </h3>
             </div>
             <div class="modal-body">            	
                 <div class="alert alert-danger">
@@ -46,8 +46,8 @@
                 <input id="delete_parent_callback" type="hidden" name="delete_callback" value="">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" onclick="confirmDeleteParentDialogOk()"> OK, I CONFIRM </button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal"> CANCEL </button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal"> <i class="fa fa-minus-circle" aria-hidden="true"></i> CANCEL </button>
+                <button type="button" class="btn btn-danger" onclick="confirmDeleteParentDialogOk()"> <i class="fa fa-check" aria-hidden="true"></i> OK, I CONFIRM </button>
             </div>
         </div>
 
