--- a/resources/app-templates/leocdp-admin/modules/asset/group-details.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-details.html
@@ -18,7 +18,7 @@
      	<button type="button" class="btn btn-danger data-control-delete" id="btn_delete_group" style="display: ;" >
          	<i class="fa fa-trash" aria-hidden="true"></i> Delete
      	</button>
-     	<button type="button" class="btn btn-primary data-control-edit" id="btn_edit_group" style="display: ;"  > 
+     	<button type="button" class="btn btn-goto-router data-control-edit" id="btn_edit_group" style="display: ;"  > 
     		<i class="fa fa-fw fa-pencil-square-o"></i> Edit 
     	</button>
     </div>
@@ -55,10 +55,10 @@
                     	<button id="btn_remove_recommended_items" type="button" class="btn btn-danger" onclick="removeRecommendedItemsInAssetGroup()" style="display: none;">
                     		<i class="fa fa-trash" aria-hidden="true"></i> Remove Recommended Items 
                     	</button>
-			        	<button id="btn_import_items" type="button" class="btn btn-goto-router data-control-update" style="display: none;" title="Import Items" > 
+			        	<button id="btn_import_items" type="button" class="btn btn-import-data data-control-update" style="display: none;" title="Import Items" > 
 			        		<i class="fa fa-cloud-upload" aria-hidden="true"></i> Import Data
 			        	</button>
-			        	<button type="button" class="btn btn-success data-control-insert" id="btn_new_item" style="display: none;" title="New Item" > 
+			        	<button type="button" class="btn btn-goto-router data-control-insert" id="btn_new_item" style="display: none;" title="New Item" > 
 			        		<i class="fa fa-plus-circle" aria-hidden="true"></i> <span id="btn_new_item_label" > New Item </span>
 			        	</button>
                     </div>
