--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -12,6 +12,8 @@
     font-size: 14px!important;
     font-weight: bold;
 }
+
+
 </style>
 
 <div class="row">
@@ -19,16 +21,16 @@
         <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
     <div class="col-lg-7 text-right" style="padding: 10px">
-    	<button type="button" class="btn btn-do-now" onclick="location.reload()" title="Refresh Profile List" > 
+    	<button type="button" class="btn btn-do-now" onclick="refreshAllProfiles()" title="Refresh Profile List" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
-    	<button type="button" class="btn btn-info data-control-update" onclick="duplicateAllProfiles()" title="Process all duplicated profiles into a single profile" > 
+    	<button type="button" class="btn btn-primary data-control-update" onclick="showMergeDuplicateProfileDialog()" title="Process all duplicated profiles into a single profile" > 
     		<i class="fa fa-compress" aria-hidden="true"></i> Deduplicate All
     	</button>
-    	<button type="button" class="btn btn-primary data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" style="background-color: #5287F7!important;"> 
+    	<button type="button" class="btn btn-import-data data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" > 
     		<i class="fa fa-cloud-upload" aria-hidden="true"></i> Import Profile
     	</button>
-    	<button type="button" class="btn data-control-update" onclick="importEventHandler()" title="Import Event from uploaded CSV file" style="background-color: #FBF95A; color: black; border:solid 1px black;"> 
+    	<button type="button" class="btn btn-import-data data-control-update" onclick="importEventHandler()" title="Import Event from uploaded CSV file" > 
     		<i class="fa fa-cloud-upload" aria-hidden="true"></i> Import Event
     	</button>
     	<button type="button" class="btn btn-goto-router data-control-insert" onclick="newProfileHandler()" title="Open editor to input new profile"> 
@@ -169,7 +171,7 @@
 							</div>
 							<div class="col-md-4 text-center" >
 							 	<button type="button" style="width: 100%;" class="btn btn-goto-router" onclick="doProfileListing()" >
-							 		<i class="fa fa-fw fa-filter"></i> OK 
+							 		<i class="fa fa-fw fa-filter"></i> Filter 
 							 	</button>
 							</div>
 						</div>						
@@ -300,7 +302,8 @@
     	});
 	}
 	
-	var duplicateAllProfiles = function() {
+	var okMergeDuplicateProfile = function(){
+		$('#mergeDuplicateProfileDialog').modal('hide');	
 		LeoAdminApiUtil.callPostAdminApi('/cdp/profiles/merge-duplicates', {'mergeStrategy' : 'automation'}, function (json) {
             if (json.httpCode === 0 && json.errorMessage === '') {
     			if(json.data){
@@ -314,6 +317,15 @@
                 LeoAdminApiUtil.logErrorPayload(json);
             }
        });
+	}
+	
+	var showMergeDuplicateProfileDialog = function() {
+		$('#mergeDuplicateProfileDialog').modal({ backdrop: 'static', keyboard: false, focus: true });
+	}
+	
+	var refreshAllProfiles = function(){
+		var t = new Date().getTime();
+		location.hash = "#calljs-leoCdpRouter('Profile_Management','_refresh_"+t+"')"
 	}
 	
     function initCustomerProfileList(encodedKeywords, profileType) {
@@ -412,7 +424,7 @@
     	
     	var loadDataCallback = function(json) {
      		if( ! $(tableDomSel).data('canInsertData') ){
- 				$('button.data-control-insert').attr('disabled','disabled').attr("title","You do not have authorization to add new profile");
+ 				$('button.data-control-insert').attr('disabled','disabled').attr("title","You do not have authorization to create profile");
  			}
      		if( ! $(tableDomSel).data('canEditData') ){
  				$('button.data-control-update').attr('disabled','disabled').attr("title","You do not have authorization to update profile");
