--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -90,7 +90,7 @@
 		         	</li>		         			         		         	
 		         	<li>
 		         		<a href="javascript:setJourneyFlowGraphView()" data-target-tab="panel_flow_network_report" title="Network Flow Report" > 
-		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Journey Report
+		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Data Journey
 		         		</a>
 		         	</li>
 	   			</ul>
