fix bugs and improve UI UX

--- a/public/html/leo-event-proxy.html
+++ b/public/html/leo-event-proxy.html
@@ -149,10 +149,12 @@
     		});
     	}
 
-  		var cbKey = "aug16.2022";
-	   	var leoObserverJsUrl = "https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files/js/leo-observer/leo.observer.min.js?cb="+cbKey;
+  		var cbKey = "20231107";
+	   	var leoObserverJsUrl = "https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@v0.8.9.22/js/leo-observer/leo.observer.min.js?cb="+cbKey;
 	   	var isDev = ROOT_DOMAIN === "obs.example.com";
-  		if(isDev) leoObserverJsUrl = "https://obs.example.com/public/js/leo-observer/leo.observer.js?cb="+cbKey;
+  		if(isDev) { 
+			leoObserverJsUrl = "https://obs.example.com/public/js/leo-observer/leo.observer.js?cb="+(new Date().getTime());
+		}
   		loadScript(leoObserverJsUrl, codeIsReady);
     </script>
 </body>
