improve UI UX of admin

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -74,11 +74,11 @@
 				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">					
 					<li>
 						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" title="Data Journey Map Management"> 
-							<i class="fa fa-fw fa-map-o"></i> Data Journey Map </a>
+							<i class="fa fa-fw fa-map-o"></i> Data Journey Maps </a>
 					</li>
 					<li id="Event_Data_Funnel_Menu" >
 						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" title="Event Data Funnel Management" >
-							<i class="fa fa-fw fa-filter"></i> Event Data Funnel </a>
+							<i class="fa fa-fw fa-filter"></i> Event Data Metrics </a>
 					</li>
 				</ul>
 			</li>
