--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
@@ -58,7 +58,7 @@
         
         <div class="col-lg-12" style="margin-top: 8px;">
          	<h4 class="text-center">
-				<mark  style="font-weight:bolder;"> All Event Metrics for Customer Analytics </mark> 
+				<mark  style="font-weight:bolder;"> All Event Data Metrics for Customer Analytics </mark> 
          		(The table is sorted by the Event Score) 
          	</h4>
             <div class="table-responsive">
