--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -26,6 +26,7 @@
 		var baseStaticDomain = '{{baseStaticUrl}}';
 		var dnsDomainLeoAdmin = '{{dnsDomainLeoAdmin}}';
 		var baseUploadDomain = '{{baseUploaderUrl}}';
+		var baseUploadedFilesDomain = '{{baseUploadedFilesUrl}}';
 		var baseLeoObserverDomain = '{{baseLeoObserverUrl}}';
 		var dnsDomainLeoBot = '{{dnsDomainLeoBot}}';
 		
