--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -34,7 +34,7 @@ div.botui-actions-buttons {
                 <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> LEO ChatBot </h4>
             </div>
             <div class="modal-body row">
-				<div class="col-md-11" >
+				<div class="col-md-9" >
             		<!-- BCP-47 language code https://en.wikipedia.org/wiki/IETF_language_tag  -->
 	            	<select id="leobot_answer_in_language" class="form-control" style="display: none;">
 				      	<option value="en" selected="selected"> Answer the question in English </option>
@@ -45,6 +45,16 @@ div.botui-actions-buttons {
 		                <option value="ja"> 質問には日本語で答える </option>
 		                <option value="zh"> 用中文回答问题 </option>
 		                <option value="ko"> 질문에 한국어로 답변하기 </option>      
+				    </select> 
+			    </div>
+			    <div class="col-md-3" >
+	            	<select id="leobot_creativity_score" class="form-control" >
+				      	<option value="0"> No Creativity </option>
+		                <option value="0.2"> 20% Creativity </option>
+		                <option value="0.4"> 40% Creativity </option>
+		                <option value="0.6"> 60% Creativity </option>
+		                <option value="0.8" selected="selected" > 80% Creativity </option>     
+		                <option value="1"> 100% Creativity </option>       
 				    </select> 
 			    </div>
                 <div class="botui-app-container" id="LEO_ChatBot_Container" style="width:100%; height:560px; overflow-y:scroll;">
